clusters/local/workloads/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: development
    labels:
        istio-injection: enabled
