clusters/local/workloads/development/api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: api-gateway
spec:
    selector:
        istio: gateway
    servers:
        -   port:
                number: 80
                name: http
                protocol: HTTP
            hosts:
                - "*"
